tests/semantic/pass/stdlib-1.tiger
let
	type int = string
in
	for a := 0 to 0 do ()
end
