tests/semantic/fail/flow-14.tiger
let
	var a := for a := 0 to 0 do ()
in
end
